# game-backend

corkboard/cloudflare/: Cargo.toml
game/cloudflare/: Cargo.toml
game/cloudflare/src/: game.rs
game/logic/: Cargo.toml
game/logic/names/pets/: adjectives.txt  adverbs.txt  nouns.txt  nouns_plural.txt
game/logic/names/romans/: cognomen_plural.txt
game/logic/src/: game.rs  leaderboard.rs  lib.rs  settings.rs  teams.rs  time.rs  watcher.rs
game/logic/src/fuiz/: common.rs  config.rs  multiple_choice.rs  order.rs  type_answer.rs
game/logic/src/names/: mod.rs  pets.rs  romans.rs
game/server/: Cargo.toml
game/server/src/: main.rs
game/server/src/game_manager/: mod.rs
