[package]
name = "fuiz-cloudflare"
version.workspace = true
edition.workspace = true
license.workspace = true
authors = ["Khaleel Al-Adhami <khaleel.aladhami@gmail.com>"]


[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.7", features = ['http'] }
worker-macros = { version = "0.7", features = ['http'] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["serde_derive", "derive", "alloc"] }
serde_json = "1.0"
garde = { version = "0.22", features = ["derive"] }
fuiz = { path = "../logic", features = ["serializable"] }
serde_bytes = "0.11"
ciborium = "0.2"
