[package]
name = "fuiz"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["lib"]

[features]
figment = ["dep:figment"] # Enable figment Provider impl for Settings
# When enabled, the game `Timestamp` is stored as a `u64` count of nanoseconds
# since the UNIX epoch and ships fully working serde impls. Required for any
# consumer that persists `Game` state across the wire (e.g. fuiz-cloudflare's
# DO/KV). When disabled (default), `Timestamp` wraps a native
# `std::time::Instant` for the cheapest possible subtraction; serde impls
# compile to runtime errors so any accidental serialization fails loud
# instead of silently corrupting state. Wasm targets unconditionally use the
# `u64` backing regardless of the feature.
serializable = []

[dependencies]
# Configuration
figment = { version = "0.10", optional = true } # Composable configuration library
# Core serialization and data structures
derive-where = "1" # Conditional derive macros
enum-map = { version = "2", features = [
    "serde",
] } # Efficient enum-to-value mappings
hashlink = "0.11" # Insertion-ordered hash set/map (linked-list backed, O(1) remove)
rustc-hash = "2" # Fast non-cryptographic hasher (FxHash) for keys with random/uniform bits
bimap = { version = "0.6", features = ["serde"] } # Bidirectional map for Names
serde = { version = "1.0", features = ["derive"] } # Serialization framework
serde_with = { version = "3", default-features = false } # Additional serde utilities
derive_more = { version = "2", features = ["full"] } # Extended derive macros

# Game logic and utilities
itertools = "0.14" # Iterator extensions
fastrand = { version = "2", features = [
    "js",
] } # Fast random number generation (WASM compatible)
uuid = { version = "1", features = [
    "v4",
    "serde",
    "js",
] } # Unique identifiers (WASM compatible)
web-time = { version = "1.1", features = [
    "serde",
] } # Cross-platform time handling (WASM/native)
once_cell_serde = { version = "1.20", features = [
    "serde",
] } # Lazy static values with serde

# Validation and safety
garde = { version = "0.22", features = ["derive"] } # Input validation framework
thiserror = "2.0"                                   # Error handling and custom error types

# Name manipulation utilities
rustrict = { version = "0.7", default-features = false, features = [
    "censor",
] } # Content filtering and profanity detection
heck = "0.5" # String case conversion
pluralizer = "0.5" # String pluralization utilities

[lints]
workspace = true

[dev-dependencies]
serde_json = "1.0" # JSON support for serde
