[package]
name = "fuiz-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
fuiz = { path = "../logic", features = ["figment"] }
figment = { version = "0.10", features = ["env"] }
actix-cors = "0.7"
actix-web = "4"
actix-ws = "0.4"
dashmap = "6"
derive-where = "1"
enum-map = { version = "2", features = ["serde"] }
fastrand = "2"
futures-util = "0.3"
log = "0.4"
pretty_env_logger = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
garde-actix-web = "0.12"
garde = "0.23"
parking_lot = "0.12"
bytes = "1.5"

[dev-dependencies]
figment = { version = "0.10", features = ["test"] }
